samples/_failures_safe/1761411453_503f06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb8e41e6.c: In function ‘main’:
./samples/SAFE/__tmp_fb8e41e6.c:169:5: error: expected expression at end of input
  169 |     free_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_fb8e41e6.c:169:5: error: expected declaration or statement at end of input
